--- a/locales/fr/main.po
+++ b/locales/fr/main.po
@@ -102,6 +102,18 @@ msgstr "Archives&nbsp;:"
 msgid "Search results for"
 msgstr "Résultats de recherche pour"
 
+#: tpl/search.html:26
+msgid "Your search returned <strong>one result</strong>:"
+msgstr "Votre recherche a retourné <strong>un résultat</strong>&nbsp;:"
+
+#: tpl/search.html:30
+msgid "Your search returned <strong>%2$s results</strong>:"
+msgstr "Votre recherche a retourné <strong>%2$s résultats</strong>&nbsp;:"
+
+#: tpl/search.html:35
+msgid "No results."
+msgstr "Aucun résultat."
+
 msgid "Posts related to the tag"
 msgstr "Billets associés au mot-clé"
 
