Modification d’une chaîne de texte

--- a/locales/_pot/main.pot
+++ b/locales/_pot/main.pot
@@ -3,7 +3,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: origine 0.5\n"
 "POT-Creation-Date: 2021-11-30T07:42:00+00:00\n"
-"PO-Revision-Date: 2021-11-29T07:41:00+00:00\n"
+"PO-Revision-Date: 2021-11-29T15:45:00+00:00\n"
 "Last-Translator: Teddy\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -51,7 +51,7 @@ msgstr ""
 msgid "Email address"
 msgstr ""
 
-msgid "URL of your personal account or website (optional)"
+msgid "URL of a personal account or website (optional)"
 msgstr ""
 
 msgid "There is nothing to display."
