--- a/locales/fr/main.po
+++ b/locales/fr/main.po
@@ -3,7 +3,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: origine 0.3\n"
 "POT-Creation-Date: 2021-11-30T07:42:00+00:00\n"
-"PO-Revision-Date: 2021-11-29T07:41:00+00:00\n"
+"PO-Revision-Date: 2021-11-29T15:45:00+00:00\n"
 "Last-Translator: Teddy\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -51,8 +51,8 @@ msgstr "Nom ou pseudonyme"
 msgid "Email address"
 msgstr "Adresse électronique"
 
-msgid "URL of your personal account or website (optional)"
-msgstr "Adresse de votre compte ou site personnel (facultatif)"
+msgid "URL of a personal account or website (optional)"
+msgstr "Adresse d’un compte ou site personnel (facultatif)"
 
 msgid "There is nothing to display."
 msgstr "Il n’y a rien à afficher."
