Changement de la mention au thème dans le pied de page

--- a/locales/fr/main.po
+++ b/locales/fr/main.po
@@ -79,8 +79,8 @@ msgstr "RSS"
 msgid "Powered by"
 msgstr "Propulsé par"
 
-msgid "and"
-msgstr "et"
+msgid "designed by"
+msgstr "habillé par"
 
 msgid "Remember me"
 msgstr "Se souvenir de moi"
