--- a/locales/fr/main.po
+++ b/locales/fr/main.po
@@ -3,7 +3,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: origine 0.3\n"
 "POT-Creation-Date: 2021-11-30T07:42:00+00:00\n"
-"PO-Revision-Date: 2021-12-02T18:28:00+00:00\n"
+"PO-Revision-Date: 2022-01-15T23:12:00+00:00\n"
 "Last-Translator: Teddy\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -39,6 +39,9 @@ msgstr "Envoyer le commentaire"
 
 msgid "Write a comment"
 msgstr "Écrire un commentaire"
+
+msgid "Comment feed"
+msgstr "Fil de syndication des commentaires"
 
 msgid "Name or nickname"
 msgstr "Nom ou pseudonyme"
