Correction des liens au bas des commentaires

--- a/locales/_pot/main.pot
+++ b/locales/_pot/main.pot
@@ -40,10 +40,10 @@ msgstr ""
 msgid "Write a comment"
 msgstr ""
 
-msgid "Comment feed"
+msgid "Comment feed:"
 msgstr ""
 
-msgid "Trackback URL:"
+msgid "Trackbacks;"
 msgstr ""
 
 msgid "Name or nickname"
