Ajout de traductions manquantes dans le titre des commentaires

--- a/locales/_pot/main.pot
+++ b/locales/_pot/main.pot
@@ -22,6 +22,12 @@ msgstr ""
 msgid "comment"
 msgstr ""
 
+msgid "One comment"
+msgstr ""
+
+msgid "%s comments"
+msgstr ""
+
 msgid "at"
 msgstr ""
 
