Amélioration de la mise en forme des commentaires et des pings

--- a/locales/fr/main.po
+++ b/locales/fr/main.po
@@ -37,6 +37,9 @@ msgstr "&nbsp;:"
 msgid "Trackback:"
 msgstr "Rétrolien&nbsp;:"
 
+msgid "Ping"
+msgstr "Ping"
+
 msgid "Previewing"
 msgstr "Prévisualisation"
 
