--- a/locales/_pot/main.pot
+++ b/locales/_pot/main.pot
@@ -10,6 +10,9 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
+msgid "Skip to content"
+msgstr ""
+
 msgid "Page without content"
 msgstr ""
 
