Prise en charge de l’affichage du nom de l’auteur et des liens de commentaires

--- a/locales/_pot/main.pot
+++ b/locales/_pot/main.pot
@@ -147,6 +147,9 @@ msgstr ""
 msgid "of"
 msgstr ""
 
+msgid "RSS Feed"
+msgstr ""
+
 # Accessibility
 msgid "Published date of the post"
 msgstr ""
