--- a/locales/_pot/main.pot
+++ b/locales/_pot/main.pot
@@ -6,10 +6,15 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
+# __layout.html
+
 msgid "Skip to content"
 msgstr ""
 
 msgid "Skip to menu"
+msgstr ""
+
+msgid "Header image"
 msgstr ""
 
 msgid "Page without content"
