Mise à jour traduction

--- a/locales/_pot/main.pot
+++ b/locales/_pot/main.pot
@@ -94,6 +94,12 @@ msgstr ""
 msgid "Selected"
 msgstr ""
 
+msgid "Read more"
+msgstr ""
+
+msgid "Read more about"
+msgstr ""
+
 msgid "Page"
 msgstr ""
 
