Changement mention pied de page

--- a/locales/fr/main.po
+++ b/locales/fr/main.po
@@ -117,8 +117,8 @@ msgstr "Propulsé par"
 msgid "https://dotclear.org/"
 msgstr "https://fr.dotclear.org/"
 
-msgid "designed by"
-msgstr "habillé par"
+msgid "and"
+msgstr "et"
 
 # Archives
 
