--- a/locales/fr/main.po
+++ b/locales/fr/main.po
@@ -111,14 +111,23 @@ msgstr "Page suivante ›"
 
 # Footer
 
-msgid "Powered by"
-msgstr "Propulsé par"
+msgid "Dotclear"
+msgstr "Dotclear"
 
 msgid "https://dotclear.org/"
 msgstr "https://fr.dotclear.org/"
 
-msgid "and"
-msgstr "et"
+msgid "Origine"
+msgstr "Origine"
+
+msgid "https://themes.dotaddict.org/galerie-dc2/details/origine"
+msgstr "https://themes.dotaddict.org/galerie-dc2/details/origine"
+
+msgid "https://github.com/te2dy/origine"
+msgstr "https://github.com/te2dy/origine"
+
+msgid "Powered by <a href="%1$s">%2$s</a> and <a href="%3$s">%4$s</a>"
+msgstr "Propulsé par <a href="%1$s">%2$s</a> et <a href="%3$s">%4$s</a>"
 
 # Archives
 
