Ajout titre billet dans pagination

--- a/locales/_pot/main.pot
+++ b/locales/_pot/main.pot
@@ -48,10 +48,10 @@ msgstr ""
 msgid "Post printed from"
 msgstr ""
 
-msgid "‹ Previous post"
+msgid "Previous post:"
 msgstr ""
 
-msgid "Next post ›"
+msgid "Next post:"
 msgstr ""
 
 # Comments & trackbacks
