Correction oubli traduction

--- a/locales/fr/main.po
+++ b/locales/fr/main.po
@@ -60,6 +60,9 @@ msgstr "Billet suivant :"
 
 # Comments & trackbacks
 
+msgid "One comment"
+msgstr "Un commentaire"
+
 msgid "comment"
 msgstr "commentaire"
 
