--- a/locales/fr/main.po
+++ b/locales/fr/main.po
@@ -92,8 +92,8 @@ msgstr "&nbsp;:"
 msgid "Trackback:"
 msgstr "Rétrolien&nbsp;:"
 
-msgid "Markdown language allowed (<a href="$s" rel="nofollow">help</a>)."
-msgstr "Langage Markdown autorisé (<a href="$s" rel="nofollow">aide</a>)."
+msgid "Markdown language allowed (<a href="https://commonmark.org/help/" hreflang="en" rel="nofollow">help</a>)."
+msgstr "Langage Markdown autorisé (<a href="https://commonmark.org/help/" hreflang="en" rel="nofollow">aide</a>)."
 
 msgid "Previewing"
 msgstr "Prévisualisation"
